// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there are no users 1`] = `
<div
  className="User"
>
  <div
    className="name"
  >
    name: 
  </div>
  <button
    onClick={[Function]}
  >
    Follow
  </button>
  <input
    checked={false}
    className="hvrIconPop"
    onChange={[Function]}
    type="checkbox"
  />
  <div>
    date: 
  </div>
  <div>
    reading time: 
  </div>
  <img
    src="avatar.png"
  />
</div>
`;

exports[`renders correctly when there is one user 1`] = `
<div
  className="User"
>
  <div
    className="name"
  >
    name: 
    Walton Morton
  </div>
  <button
    onClick={[Function]}
  >
    Unfollow
  </button>
  <input
    checked={false}
    className="hvrIconPop"
    onChange={[Function]}
    type="checkbox"
  />
  <div>
    date: 
    Aug 9
  </div>
  <div>
    reading time: 
    20
  </div>
  <img
    alt="Walton Morton"
    src="avatar.png"
  />
</div>
`;
